--- a/src/root/App.scss
+++ b/src/root/App.scss
@@ -73,6 +73,7 @@ $alarmed: #ff0000;
           align-items: center;
           border-bottom: 1px solid gainsboro;
           font-size: 16px;
+
           .name {
             min-width: 200px;
             white-space: nowrap;
@@ -80,12 +81,20 @@ $alarmed: #ff0000;
 
           .value {
             min-width: 150px;
+            &.linked {
+              text-decoration: underline;
+              cursor: pointer;
+              color: blue;
+            }
+
             .money-cell {
               font-weight: bolder;
             }
+
             .active {
               color: $active;
             }
+            
             .alarmed {
               color: $alarmed;
             }
